[tool.poetry]
name = "docker-debian-management"
version = "0.1.0"
description = "See README.md"
authors = ["Fredrik Andersson <fredrik.andersson@industrialpathsolutions.com>"]
readme = "README.md"
packages = [{include = "docker_debian_management"}]

[tool.poetry.dependencies]
python = "^3.10"
GitPython = "^3.1.31"
pygithub = "^1.58.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
